# deeplens

./: .gitignore  README.md  _serve.py  pyproject.toml  serve_app.py
deeplens/: __init__.py  __main__.py  config.py
deeplens/analyst/: __init__.py  chat.py  llm.py  nl_filter.py
deeplens/annotate/: __init__.py  labeler.py
deeplens/compare/: __init__.py  drift.py  models.py
deeplens/dashboard/: __init__.py  app.py
deeplens/data/: __init__.py  loaders.py  profiler.py  sources.py  transforms.py
deeplens/embeddings/: __init__.py  compute.py  explorer.py  reduce.py
deeplens/explain/: __init__.py  counterfactual.py  engine.py  shap_plots.py
deeplens/export/: __init__.py  notebook.py
deeplens/models/: __init__.py  error_analysis.py  inspector.py  trainer.py
deeplens/quality/: __init__.py  dr_quality.py
examples/: drift_detection.py  full_dashboard.py  image_classification.py  model_comparison.py  quickstart.py  text_embeddings.py
tests/: conftest.py  test_analyst.py  test_chat.py  test_compare_models.py  test_config.py  test_counterfactual.py  test_dashboard.py  test_drift.py  test_embeddings.py  test_engine.py  test_error_analysis.py  test_explorer.py  test_init.py  test_inspector.py  test_labeler.py  test_llm.py  test_loaders.py  test_main.py  test_nl_filter.py  test_notebook_export.py  test_profiler.py  test_quality.py  test_reduce.py  test_shap_plots.py  test_sources.py  test_trainer.py  test_transforms.py
